@@ -43,6 +43,8 @@ pypet 0.1b.3
 *   Every component now provides the function `set_logger` to enable logging and instantiate a
     logger for `self.logger`
 
+*   Now Pypet allows compression of HDF5 files, these can yield a massive reduction in
+    memory space.
 
 pypet 0.1b.2
 
